🚧  Assign global z-index to .order-cta to prevent it from being overlapped

--- a/styles/constants/_z-indexes.scss
+++ b/styles/constants/_z-indexes.scss
@@ -1,6 +1,7 @@
 $product-tab-level: 30;
-$lnb-level: 40;
-$gnb-level: 50;
+$order-cta-level: 40;
+$lnb-level: 50;
+$gnb-level: 60;
 
 $overlay-level: 100;
 $sidebar-level: 200;
